--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 ./dogs-vs-cats-redux-kernels-edition.zip
+./dogs-vs-cats-redux-kernels-edition
