--- a/.gitignore
+++ b/.gitignore
@@ -158,5 +158,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-./dogs-vs-cats-redux-kernels-edition.zip
-./dogs-vs-cats-redux-kernels-edition
+/dogs-vs-cats-redux-kernels-edition/
+/dogs-vs-cats-redux-kernels-edition.zip
