--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pillow~=9.2.0
 torchvision~=0.13.1
-tqdm~=4.65.0
 torch~=1.12.1
-numpy~=1.21.5
 visdom~=0.1.05
+numpy~=1.21.6
+fire~=0.5.0
+tqdm~=4.65.0
