--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pillow~=9.2.0
-torchvision~=0.13.1
 torch~=1.12.1
-visdom~=0.1.05
+torchvision~=0.13.1
 numpy~=1.21.6
+visdom~=0.2.4
 fire~=0.5.0
+pandas~=1.3.5
 tqdm~=4.65.0
+pillow~=9.5.0
